Source/WTF/wtf/Threading.cpp
@@ -146,6 +146,10 @@ void Thread::initializeInThread()
         m_currentAtomStringTable = &sharedStringTable.get();
     }
 #endif
+
+#if OS(LINUX)
+    m_id = currentID();
+#endif
 }
 
 void Thread::entryPoint(NewThreadContext* newThreadContext)
